Deno permissions for Nest

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --allow-read --allow-env --allow-net --watch main.ts"
   },
   "imports": {
     "@nestjs/common": "npm:@nestjs/common@^10.4.4",
