--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,11 @@
 {
   "tasks": {
-    "dev": "deno run --allow-read --allow-env --allow-net --watch main.ts"
+    "dev": "deno run --env --allow-read --allow-env --allow-net --watch main.ts"
   },
   "imports": {
     "@nestjs/common": "npm:@nestjs/common@^10.4.4",
     "@nestjs/core": "npm:@nestjs/core@^10.4.4",
     "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.4",
-    "@std/assert": "jsr:@std/assert@1",
     "reflect-metadata": "npm:reflect-metadata@^0.2.2",
     "rxjs": "npm:rxjs@^7.8.1"
   },
