Prisma introduced. Not easy to do it though. Might be easier to have it as a part of Monorepo.

--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,12 @@
 {
   "tasks": {
-    "dev": "deno run --env --allow-read --allow-env --allow-net --watch main.ts"
+    "dev": "deno run --env --allow-read --allow-env --allow-net --allow-ffi --watch main.ts"
   },
   "imports": {
     "@nestjs/common": "npm:@nestjs/common@^10.4.4",
     "@nestjs/core": "npm:@nestjs/core@^10.4.4",
     "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.4",
+    "prisma": "npm:prisma@^5.20.0",
     "reflect-metadata": "npm:reflect-metadata@^0.2.2",
     "rxjs": "npm:rxjs@^7.8.1"
   },
