--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,18 @@
 {
   "tasks": {
-    "dev": "deno run --env --allow-read --allow-env --allow-net --allow-ffi --watch main.ts"
+    "dev": "deno run --env --allow-read --allow-env --allow-net --allow-ffi --watch main.ts",
+    "prisma:generate": "deno run --allow-run --allow-env --allow-read --allow-write --allow-sys=cpus,homedir,osRelease,uid --allow-net=binaries.prisma.sh:443 npm:prisma generate"
   },
   "imports": {
     "@nestjs/common": "npm:@nestjs/common@^10.4.4",
     "@nestjs/core": "npm:@nestjs/core@^10.4.4",
     "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.4",
-    "prisma": "npm:prisma@^5.20.0",
+    "@prisma/client": "npm:@prisma/client@^5.21.0",
+    "prisma": "npm:prisma@^5.21.0",
     "reflect-metadata": "npm:reflect-metadata@^0.2.2",
     "rxjs": "npm:rxjs@^7.8.1"
   },
+  "nodeModulesDir": "auto",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
