Ignore SQLite db

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
     "dev": "deno run --env --allow-read --allow-env --allow-net --allow-ffi --watch main.ts",
-    "prisma:generate": "deno run --allow-run --allow-env --allow-read --allow-write --allow-sys=cpus,homedir,osRelease,uid --allow-net=binaries.prisma.sh:443 npm:prisma generate"
+    "prisma:generate": "deno run --allow-run --allow-env --allow-read --allow-write --allow-sys=cpus,homedir,osRelease,uid --allow-net=binaries.prisma.sh:443 npm:prisma generate",
+    "prisma:db:push": "deno run --allow-env --allow-run --allow-write --allow-read --allow-sys=cpus,homedir,osRelease,uid npm:prisma db push"
   },
   "imports": {
     "@nestjs/common": "npm:@nestjs/common@^10.4.4",
