--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,10 @@
 {
   "tasks": {
     "dev": "deno run --env --allow-read --allow-env --allow-net --allow-ffi --allow-sys=osRelease --watch main.ts",
+    "start": "deno run --env --allow-read --allow-env --allow-net --allow-ffi --allow-sys=osRelease main.ts",
+    "script:install": "deno install --allow-scripts=npm:prisma,npm:@prisma/client,npm:@prisma/engines,npm:@nestjs/core",
     "prisma:generate": "deno run --allow-run --allow-env --allow-read --allow-write --allow-sys=cpus,homedir,osRelease,uid --allow-net=binaries.prisma.sh:443 npm:prisma generate",
-    "prisma:db:push": "deno run --allow-env --allow-run --allow-write --allow-read --allow-sys=cpus,homedir,osRelease,uid npm:prisma db push"
+    "prisma:db:push": "deno run --allow-env --allow-run --allow-write --allow-read --allow-sys=cpus,homedir,osRelease,uid --allow-net=binaries.prisma.sh:443 npm:prisma db push"
   },
   "imports": {
     "@nestjs/common": "npm:@nestjs/common@^10.4.4",
