--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "tasks": {
     "dev": "DENO_TRACE_PERMISSIONS=true deno run --env --allow-read --allow-env --allow-net --allow-ffi --allow-sys=osRelease --watch main.ts",
     "start": "deno run --env --allow-read --allow-env --allow-net --allow-ffi --allow-sys=osRelease main.ts",
+    "task": "deno test --cached-only ./import-map=./dev.json",
     "script:install": "deno install --allow-scripts=npm:prisma,npm:@prisma/client,npm:@prisma/engines,npm:@nestjs/core",
     "prisma:generate": "deno run --allow-run --allow-env --allow-read --allow-write --allow-sys=cpus,homedir,osRelease,uid --allow-net=binaries.prisma.sh:443 npm:prisma generate",
     "prisma:db:push": "deno run --allow-env --allow-run --allow-write --allow-read --allow-sys=cpus,homedir,osRelease,uid --allow-net=binaries.prisma.sh:443 npm:prisma db push"
@@ -10,7 +11,10 @@
     "@nestjs/common": "npm:@nestjs/common@^10.4.4",
     "@nestjs/core": "npm:@nestjs/core@^10.4.4",
     "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.4",
+    "@nestjs/testing": "npm:@nestjs/testing@^11.0.6",
     "@prisma/client": "npm:@prisma/client@^5.21.0",
+    "@std/expect": "jsr:@std/expect@^1.0.12",
+    "@std/testing": "jsr:@std/testing@^1.0.9",
     "prisma": "npm:prisma@^5.21.0",
     "reflect-metadata": "npm:reflect-metadata@^0.2.2",
     "rxjs": "npm:rxjs@^7.8.1"
